bizinikiwi/pezframe/support/test/tests/pezpallet_ui/error_wrong_item.stderr
error: Invalid pezpallet::error, expected item enum
  --> tests/pezpallet_ui/error_wrong_item.rs:36:2
   |
36 |     pub struct Foo;
   |     ^^^
